--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.cshtml
@@ -10,6 +10,7 @@
 
 <div asp-validation-summary="All"></div>
 <input sm-if="Model.Id == 0" asp-for="Id" type="hidden" />
+<input asp-for="IsGuest" type="hidden" />
 
 <tabstrip id="customer-edit" sm-nav-style="Material" sm-nav-position="Left" sm-onajaxsuccess="customerEditTab_onAjaxSuccess" >
     <tab sm-title="@T("Admin.Customers.Customers.Info")" sm-selected="true" sm-icon="bi:pencil">
