--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/_DiscountBox.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/_DiscountBox.cshtml
@@ -26,8 +26,13 @@
         }
 
         <div class="coupon-code form-group">
-            <div class="input-group" attr-class='(Model.CurrentCode.HasValue(), "has-success")'>
-                <input name="discountcouponcode" type="text" class="form-control is-valid discount-coupon-code" value="@Model.CurrentCode" placeholder="@T("ShoppingCart.DiscountCouponCode.Tooltip")" />
+            <div class="input-group">
+                <input name="discountcouponcode"
+                       class="form-control discount-coupon-code"
+                       attr-class='(Model.CurrentCode.HasValue(), "is-valid")'
+                       type="text" 
+                       value="@Model.CurrentCode" 
+                       placeholder="@T("ShoppingCart.DiscountCouponCode.Tooltip")" />
                 <span class="input-group-append">
                     @if (Model.CurrentCode.IsEmpty())
                     {
