--- a/src/Smartstore.Web/Areas/Admin/Views/Rule/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Rule/_CreateOrUpdate.cshtml
@@ -135,7 +135,7 @@
     <div id="ruleset-root" class="ruleset-root" 
          data-dirty="false"
          data-scope="@((int)Model.Scope)"
-         data-related-id="0"
+         data-entity-id="0"
          data-url-addgroup="@Url.Action("AddGroup")" 
          data-url-deletegroup="@Url.Action("DeleteGroup")"
          data-url-updaterules="@Url.Action("UpdateRules")"
