--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_ProductVariantAttributeRules.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_ProductVariantAttributeRules.cshtml
@@ -2,8 +2,6 @@
 
 @{
     Assets.AppendScriptFiles("~/admin/js/smartstore.rules.js");
-
-    var productAttributeIds = ViewBag.RuleProductAttributeIds as int[];
 }
 
 <div id="ruleset-root" class="ruleset-root"
@@ -16,7 +14,5 @@
      data-url-addrule="@Url.Action("AddRule", "Rule", new { area = "Admin" })"
      data-url-deleterule="@Url.Action("DeleteRule", "Rule", new { area = "Admin" })"
      data-url-changeoperator="@Url.Action("ChangeOperator", "Rule", new { area = "Admin" })">
-    <partial name="~/Areas/Admin/Views/Rule/_RuleSet.cshtml" 
-             model="Model.RuleSet.ExpressionGroup" 
-             view-data='new ViewDataDictionary(ViewData) { ["ProductAttributeIds"] = productAttributeIds }'/>
+    <partial name="~/Areas/Admin/Views/Rule/_RuleSet.cshtml" model="Model.RuleSet.ExpressionGroup" />
 </div>
