--- a/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
@@ -241,7 +241,7 @@ $modal-footer-bg:                   rgba($black, 0.04) !default;
 $modal-footer-margin-between:       0.375rem !default;
 $modal-inner-padding:               1.5rem !default;
 $modal-header-padding:              1.5rem !default;
-$modal-content-border-width:        0 !default;
+$modal-content-border-width:        0px !default;
 $modal-content-border-color:        rgba($black, .06) !default;
 $modal-backdrop-bg:                 $black !default;
 $modal-backdrop-opacity:            .68 !default;
