--- a/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
@@ -240,7 +240,8 @@ $pagination-padding-x-xs:           6px !default;
 $modal-footer-bg:                   rgba($black, 0.04) !default;
 $modal-footer-margin-between:       0.375rem !default;
 $modal-inner-padding:               1.5rem !default;
-$modal-header-padding:              1.5rem !default;
+$modal-header-padding-x:            1.5rem !default;
+$modal-header-padding-y:            1rem !default;
 $modal-content-border-width:        0px !default;
 $modal-content-border-color:        rgba($black, .06) !default;
 $modal-backdrop-bg:                 $black !default;
