--- a/src/Smartstore.Web/Areas/Admin/Views/Product/Grids/_Grid.ProductVariantAttribute.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/Grids/_Grid.ProductVariantAttribute.cshtml
@@ -32,6 +32,12 @@
                 <span>@T("Common.Cancel")</span>
             </button>
         </toolbar-group>
+        <toolbar-group>
+            <a href="#copy-attributes-popup" data-toggle="modal" class="btn btn-primary btn-flat">
+                <i class="fa fa-tasks"></i>
+                <span>@T("Admin.Catalog.Products.ProductVariantAttributes.TransferAttributes")…</span>
+            </a>
+        </toolbar-group>
         <zone name="datagrid_toolbar_alpha"></zone>
         <toolbar-group class="omega"></toolbar-group>
         <zone name="datagrid_toolbar_omega"></zone>
