--- a/src/Smartstore.Web/Areas/Admin/Views/Product/Edit.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/Edit.cshtml
@@ -48,7 +48,7 @@
 @if (Model.Id != 0 && Model.NumberOfAvailableProductAttributes > 0)
 {
     <partial name="_CopyAttributeOptionsDialog" />
-    <partial name="Partials/_CopyAttributesPopup" />
+    <partial name="Partials/_CopyAttributesPopup" model="Model" />
 }
 
 <partial name="_CopyProductDialog" model="Model" />
