Render Checkout.OrderHasBeenReceived as HTML

--- a/src/Smartstore.Web/Views/Checkout/Completed.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Completed.cshtml
@@ -15,7 +15,7 @@
 
 <div class="page checkout-completed-page">
 	<div class="heading mt-3">
-		<h1 class="heading-title font-weight-light">@T("Checkout.OrderHasBeenReceived")</h1>
+		<h1 class="heading-title font-weight-light">@Html.Raw(T("Checkout.OrderHasBeenReceived"))</h1>
 	</div>
 
 	<h3 class="text-muted font-weight-light">
