Render Checkout.ThankYou as HTML

--- a/src/Smartstore.Web/Views/Checkout/Completed.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Completed.cshtml
@@ -19,7 +19,7 @@
 	</div>
 
 	<h3 class="text-muted font-weight-light">
-		@T("Checkout.ThankYou")
+        @Html.Raw(T("Checkout.ThankYou"))
 	</h3>
     
     <div class="page-body checkout-data pt-4">
