Theming: $text-muted --> $body-secondary-color

--- a/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
@@ -64,6 +64,8 @@ $enable-negative-margins:       true !default;
 
 $body-bg:                   $white !default;
 $body-color:                null !default;
+$body-secondary-color:      null !default;
+$body-tertiary-color:       null !default;
 
 
 // Links
