Minor layout fix

--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.cshtml
@@ -38,7 +38,7 @@
             <partial name="Product.Attrs" model="Model" />
         </div>
     </div>
-    <div class="col col-lg-5 d-flex">
+    <div class="col col-lg-5 d-flex flex-column">
         <!-- Offer box -->
         <partial name="Product.Offer" model="Model" />
     </div>
